--- a/overlay/Frameworks/res/values/config.xml
+++ b/overlay/Frameworks/res/values/config.xml
@@ -432,4 +432,6 @@
     <!-- Whether to enable Lineage Health Service -->
     <bool name="config_lineageHealthSupported">true</bool>
 
+    <!-- Whether device has turbo power charging support -->
+    <bool name="config_hasTurboPowerCharger">true</bool>
 </resources>
